# Musync

./: README.md
Client/client/: README.md  package-lock.json  package.json
Client/client/src/: App.js  App.tsx  GroupsTab.tsx  Login.css  Login.js  Login.tsx  MutualPlaylists.tsx  Player.tsx  Playlist.tsx  Router.js  index.css
Documents/STACSHACK2020/Stacs2020-master/Client/client/src/: App.js
MutualPlaylist/: Cargo.toml
MutualPlaylist/src/: main.rs
RequestServer/: index.js  package-lock.json  package.json
RustRequest/: .spotify_token_cache.json  Cargo.toml
RustRequest/src/: communication.rs  lib.rs  main.rs  spotify.rs
