[package]
name = "MutualPlaylist"
version = "0.1.0"
authors = ["Simon <sc312@st-andrews.ac.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ws = "*"
rspotify = "*"
tokio = { version = "*", features = ["full"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
threadpool = "*"
ctrlc = "*"