[package]
name = "RustRequest"
version = "0.1.0"
authors = ["Simon <SimonHCadge@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ws = "*"
serde = { version = "*", features = ["derive"]}
serde_json = "*"
threadpool = "*"
rspotify = "*"
tokio = { version = "*", features = ["full"] }
ctrlc = "*"