[package]
name = "RustRequest"
version = "0.1.0"
authors = ["Simon <SimonHCadge@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "*", features = ["derive"]}
serde_json = "*"
dashmap = "*"
rspotify = "*"
ws = "*"
tokio = { version = "*", features = ["macros", "rt-threaded"]}